add show more details modal, accordion in invite-friends

--- a/css/components.css
+++ b/css/components.css
@@ -375,4 +375,208 @@
   overflow: hidden !important;
   text-overflow: ellipsis !important;
 }
+._n0520t {
+  position: fixed !important;
+  z-index: 2000 !important;
+  inset: 0px !important;
+  overflow-y: auto !important;
+  background: rgba(0, 0, 0, 0.75) !important;
+}
+._1sjmvoc {
+  display: table !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+._13nncl3 {
+  display: table-cell !important;
+  vertical-align: middle !important;
+  padding: 64px !important;
+}
+._1tnlies {
+  background-color: rgb(255, 255, 255) !important;
+  margin: auto !important;
+  max-width: 568px !important;
+  width: 100% !important;
+  position: relative !important;
+}
+._wpwi48 {
+  background-color: rgb(255, 255, 255) !important;
+  padding: 32px !important;
+  box-sizing: border-box !important;
+}
+._152qbzi {
+  margin-bottom: 24px !important;
+}
+._1rp5252 {
+  cursor: pointer !important;
+  background-color: transparent !important;
+  color: buttontext !important;
+  border: 0px !important;
+  display: block !important;
+}
+._11qg6v7y {
+  border-bottom: 0px !important;
+  padding-bottom: 24px !important;
+  padding-top: 0px !important;
+}
+._14i3z6h {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+._s1tlw0m {
+  margin: 0px !important;
+  overflow-wrap: break-word !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 24px !important;
+  font-weight: 800 !important;
+  line-height: 1.25em !important;
+  color: rgb(72, 72, 72) !important;
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
+}
+._czm8crp {
+  margin: 0px !important;
+  overflow-wrap: break-word !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  font-weight: 400 !important;
+  line-height: 1.375em !important;
+  color: rgb(72, 72, 72) !important;
+}
+._csc5ey {
+  border-bottom: 1px solid rgb(235, 235, 235) !important;
+  position: relative !important;
+  display: inline-block !important;
+  vertical-align: middle !important;
+  min-width: 100% !important;
+}
+._36rlri {
+  display: inline-block !important;
+}
+._1yrhm7tp {
+  font-size: 16px !important;
+  line-height: 22px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+  background-color: transparent !important;
+  border-radius: 0px !important;
+  border-width: 0px 0px 2px !important;
+  border-bottom-style: solid !important;
+  bottom: -1px !important;
+  cursor: pointer !important;
+  display: block !important;
+  margin-right: 32px !important;
+  padding: 24px 0px !important;
+  text-decoration: none !important;
+  white-space: nowrap !important;
+  border-bottom-color: rgb(0, 132, 137) !important;
+  color: rgb(0, 132, 137) !important;
+  transition-property: color !important;
+  transition-duration: 300ms !important;
+  transition-timing-function: ease-out !important;
+}
+@supports (--custom: properties) {
+  ._1yrhm7tp {
+    font-size: var(--font-text-regular-font-size, 16px) !important;
+    line-height: var(--font-text-regular-line-height, 22px) !important;
+    letter-spacing: var(--font-text-regular-letter-spacing, normal) !important;
+    font-family: var(
+      --font-text-regular-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(
+      --font-text-regular-text-transform,
+      undefined
+    ) !important;
+    font-weight: var(--font-book-font-weight, 600) !important;
+    background-color: var(--color-clear, transparent) !important;
+    border-bottom-width: var(--border-tab-border-width, 2px) !important;
+    margin-right: var(--spacing-tab-margin-right, 32px) !important;
+    padding-left: var(--spacing-tab-horizontal, 0px) !important;
+    padding-right: var(--spacing-tab-horizontal, 0px) !important;
+    padding-top: var(--spacing-tab-vertical, 24px) !important;
+    padding-bottom: var(--spacing-tab-vertical, 24px) !important;
+    border-bottom-color: var(
+      --color-tab-underline-color-selected,
+      #008489
+    ) !important;
+    color: var(--color-tab-text-color-selected, #008489) !important;
+  }
+}
+._6v5uk23 {
+  font-size: 16px !important;
+  line-height: 22px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  color: rgb(72, 72, 72) !important;
+  font-weight: 600 !important;
+  background-color: transparent !important;
+  border-radius: 0px !important;
+  border-width: 0px 0px 2px !important;
+  border-bottom-style: solid !important;
+  border-bottom-color: transparent !important;
+  bottom: -1px !important;
+  cursor: pointer !important;
+  display: block !important;
+  margin-right: 32px !important;
+  padding: 24px 0px !important;
+  text-decoration: none !important;
+  white-space: nowrap !important;
+}
+@supports (--custom: properties) {
+  ._6v5uk23 {
+    font-size: var(--font-text-regular-font-size, 16px) !important;
+    line-height: var(--font-text-regular-line-height, 22px) !important;
+    letter-spacing: var(--font-text-regular-letter-spacing, normal) !important;
+    font-family: var(
+      --font-text-regular-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(
+      --font-text-regular-text-transform,
+      undefined
+    ) !important;
+    color: var(--font-text-regular-color, #484848) !important;
+    font-weight: var(--font-book-font-weight, 600) !important;
+    background-color: var(--color-clear, transparent) !important;
+    border-bottom-width: var(--border-tab-border-width, 2px) !important;
+    border-bottom-color: var(--color-clear, transparent) !important;
+    margin-right: var(--spacing-tab-margin-right, 32px) !important;
+    padding-left: var(--spacing-tab-horizontal, 0px) !important;
+    padding-right: var(--spacing-tab-horizontal, 0px) !important;
+    padding-top: var(--spacing-tab-vertical, 24px) !important;
+    padding-bottom: var(--spacing-tab-vertical, 24px) !important;
+  }
+}
+._18hrqvin {
+  margin: 0px !important;
+  overflow-wrap: break-word !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 32px !important;
+  font-weight: 800 !important;
+  line-height: 1.125em !important;
+  color: rgb(72, 72, 72) !important;
+  padding-top: 6px !important;
+  padding-bottom: 6px !important;
+}
 /* /Modal */
