--- a/pages/css/invite-friends.css
+++ b/pages/css/invite-friends.css
@@ -4393,3 +4393,9 @@
   color: var(--f-k-smk-x) !important;
   width: 100% !important;
 }
+._5ktaok {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  margin-top: 14px !important;
+  margin-bottom: 0px !important;
+}
