--- a/pages/css/notifications.css
+++ b/pages/css/notifications.css
@@ -6572,3 +6572,470 @@ html.scrollbar-gutter[class][class] {
 ._a7a5sx {
   color: rgb(113, 113, 113) !important;
 }
+._1sqnphj {
+  padding-left: 4px !important;
+}
+._3xpo1f {
+  background-color: rgb(34, 34, 34) !important;
+  border-radius: 100px !important;
+  border: 1px solid rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  display: inline-block !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 800 !important;
+  text-transform: uppercase !important;
+  text-align: center !important;
+  padding: 1px 7px !important;
+  font-size: 12px !important;
+  line-height: 12px !important;
+}
+._10br0yfc:first-child {
+  margin-left: -8px !important;
+}
+._6tvt8jj:hover {
+  background: rgb(247, 247, 247) !important;
+  color: rgb(34, 34, 34) !important;
+}
+._wlj5ur {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-flex: 1 !important;
+  flex-grow: 1 !important;
+  display: flex;
+  flex-direction: column !important;
+  height: 100px !important;
+}
+._1xheem {
+  -webkit-box-flex: 1 !important;
+  flex-grow: 1 !important;
+  overflow: hidden auto !important;
+  height: 100px !important;
+}
+._12ty3s {
+  -webkit-box-align: stretch !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  cursor: pointer !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: stretch !important;
+  margin-right: 12px !important;
+  margin-left: 12px !important;
+}
+._1iq7ga1 {
+  padding: 24px 12px !important;
+  position: relative !important;
+}
+._144jxrbt {
+  position: absolute !important;
+  z-index: 1 !important;
+  inset: 0px 2px !important;
+  background: transparent !important;
+  border: none !important;
+  color: inherit !important;
+  cursor: pointer !important;
+  display: block !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  border-radius: 12px !important;
+  outline: none !important;
+}
+._ignfsr {
+  -webkit-box-flex: 1 !important;
+  -webkit-box-align: start !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  position: relative !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: flex-start !important;
+  flex-grow: 1 !important;
+}
+._vaj62s {
+  margin-right: 12px !important;
+}
+._oc275mr {
+  background-color: rgb(221, 221, 221) !important;
+  border-radius: 100px !important;
+  vertical-align: middle !important;
+  overflow: hidden !important;
+  display: block !important;
+  width: 56px !important;
+  height: 56px !important;
+}
+._1h6n1zu {
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+._9ofhsl {
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+}
+@supports (object-fit: cover) {
+  ._9ofhsl {
+    height: 100% !important;
+    width: 100% !important;
+    position: static !important;
+  }
+}
+._15p4g025 {
+  display: inline-block !important;
+  vertical-align: bottom !important;
+  height: 100% !important;
+  width: 100% !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+@supports (object-fit: cover) {
+  ._15p4g025 {
+    display: none !important;
+    background-image: none !important;
+  }
+}
+._a0bx3p {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  min-width: 0px !important;
+  flex: 1 0 100px !important;
+  display: flex !important;
+  flex-direction: column !important;
+}
+._4n62wsl {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  min-height: 18px !important;
+  color: rgb(34, 34, 34) !important;
+  margin-right: 10px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  display: flex !important;
+  flex-direction: row !important;
+}
+._1xyfhitm {
+  -webkit-box-flex: 1 !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  flex-grow: 1 !important;
+  width: 10px !important;
+}
+._1j2r3992 {
+  margin-right: 8px !important;
+  color: rgb(34, 34, 34) !important;
+  margin-top: 4px !important;
+  font-size: 14px !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2 !important;
+  -webkit-box-orient: vertical !important;
+}
+@supports (overflow: clip) {
+  ._1j2r3992 {
+    overflow: clip !important;
+  }
+}
+._1p7iugi {
+  font-weight: 800 !important;
+}
+._xu8x17 {
+  height: 0px !important;
+  border-top: 1px solid rgb(221, 221, 221) !important;
+  margin-left: 12px !important;
+  margin-right: 12px !important;
+}
+._j30xf7y {
+  position: relative !important;
+  width: 56px !important;
+  height: 56px !important;
+}
+._6fi87sr {
+  background-color: rgb(221, 221, 221) !important;
+  border-radius: 100px !important;
+  vertical-align: middle !important;
+  overflow: hidden !important;
+  display: block !important;
+  width: 40px !important;
+  height: 40px !important;
+}
+._17udoso {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  position: absolute !important;
+  bottom: 2px !important;
+  right: 0px !important;
+  border-radius: 100px !important;
+  background-color: rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  width: 36px !important;
+  height: 36px !important;
+  font-size: 10px !important;
+  line-height: 12px !important;
+  font-weight: 800 !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center !important;
+  border: 2px solid white !important;
+  padding-bottom: 1px !important;
+}
+._w8a1naz {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  color: rgb(113, 113, 113) !important;
+  margin-top: 4px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  display: flex !important;
+  flex-direction: row !important;
+}
+._1echw73e {
+  border-radius: 100px !important;
+  vertical-align: middle !important;
+  overflow: hidden !important;
+  display: block !important;
+  margin: 0px !important;
+  padding: 2px !important;
+  background-color: rgb(255, 255, 255) !important;
+  width: 40px !important;
+  height: 40px !important;
+  position: absolute !important;
+  bottom: 3px !important;
+  right: 1px !important;
+}
+._1u5o7fe {
+  overflow: hidden !important;
+  border-radius: 100px !important;
+  background-color: rgb(221, 221, 221) !important;
+}
+._yy1pozt {
+  -webkit-box-align: stretch !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  cursor: pointer !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: stretch !important;
+  margin-right: 12px !important;
+  margin-left: 12px !important;
+  border-bottom-width: 0px !important;
+}
+._j8jvwx {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 6px 24px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s,
+    transform 0.25s ease 0s !important;
+}
+._j8jvwx:not(:focus) {
+  border: 0px !important;
+  clip: rect(0px px, 0px, 0px, 0px) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+}
+._j8jvwx::before {
+  content: '' !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 42px !important;
+  height: 42px !important;
+  border-radius: 50% !important;
+}
+._1arxx82 {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 0px solid rgb(221, 221, 221) !important;
+  background-color: rgb(255, 255, 255) !important;
+  outline: none !important;
+  padding: 6px !important;
+  margin: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 50% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+._1ym0gspv {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 0px solid rgb(34, 34, 34) !important;
+  outline: none !important;
+  padding: 6px !important;
+  margin: 0px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 50% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center !important;
+  background-color: rgb(247, 247, 247) !important;
+  color: rgb(34, 34, 34) !important;
+}
+@media (hover: hover) {
+  ._1ym0gspv:hover {
+    color: rgb(0, 0, 0) !important;
+    border-color: rgb(0, 0, 0) !important;
+  }
+}
+._1ym0gspv:hover {
+  background-color: rgb(247, 247, 247) !important;
+}
+._1ym0gspv:active {
+  color: rgb(0, 0, 0) !important;
+  border-color: rgb(0, 0, 0) !important;
+  transform: scale(0.925) !important;
+}
+._1ym0gspv::after {
+  content: '' !important;
+  width: calc(100% + 2px) !important;
+  height: calc(100% + 2px) !important;
+  background-color: transparent !important;
+  position: absolute !important;
+  top: -1px !important;
+  left: -1px !important;
+  border-color: inherit !important;
+  border-style: solid !important;
+  border-width: 2px !important;
+  border-radius: inherit !important;
+}
+._1vwho579 {
+  display: block !important;
+  height: 0px !important;
+  overflow: hidden !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
+  background-color: rgb(247, 247, 247) !important;
+  color: rgb(34, 34, 34) !important;
+  border-color: rgb(34, 34, 34) !important;
+}
+@media (hover: hover) {
+  ._1arxx82:hover {
+    color: rgb(0, 0, 0) !important;
+    border-color: rgb(0, 0, 0) !important;
+  }
+}
+._1arxx82:hover {
+  background-color: rgb(247, 247, 247) !important;
+}
+._1arxx82:active {
+  color: rgb(0, 0, 0) !important;
+  border-color: rgb(0, 0, 0) !important;
+  transform: scale(0.925) !important;
+}
+._1ynftww9 {
+  background: rgb(255, 255, 255) !important;
+  border-radius: 12px !important;
+  box-shadow: rgb(0 0 0 / 12%) 0px 2px 16px !important;
+  color: rgb(34, 34, 34) !important;
+  margin-top: 34px !important;
+  padding: 8px 0px !important;
+  position: absolute !important;
+  top: 50% !important;
+  right: 0px !important;
+  max-height: calc(100vh - 100px) !important;
+  overflow-y: auto !important;
+  z-index: 2 !important;
+  min-width: 240px !important;
+  display: block;
+}
+._7f3mm0 {
+  background-color: rgb(247, 247, 247) !important;
+}
+._yy1t5kt {
+  -webkit-box-align: center !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  color: var(--f-k-smk-x) !important;
+  cursor: pointer !important;
+  display: flex !important;
+  font-family: inherit !important;
+  font-size: var(--c-zdwk-p) !important;
+  font-weight: var(--e-y-j-d-v-j) !important;
+  line-height: var(--j-p-z-kco) !important;
+  margin: 0px !important;
+  outline: none !important;
+  overflow: visible !important;
+  padding: 12px 16px !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  user-select: auto !important;
+  white-space: nowrap !important;
+  width: 100% !important;
+  align-items: center !important;
+}
+._ojs7nk {
+  flex: 1 0 auto !important;
+}
+._yy1t5kt {
+  -webkit-box-align: center !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  color: var(--f-k-smk-x) !important;
+  cursor: pointer !important;
+  display: flex !important;
+  font-family: inherit !important;
+  font-size: var(--c-zdwk-p) !important;
+  font-weight: var(--e-y-j-d-v-j) !important;
+  line-height: var(--j-p-z-kco) !important;
+  margin: 0px !important;
+  outline: none !important;
+  overflow: visible !important;
+  padding: 12px 16px !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  user-select: auto !important;
+  white-space: nowrap !important;
+  width: 100% !important;
+  align-items: center !important;
+}
