--- a/css/components.css
+++ b/css/components.css
@@ -579,4 +579,9 @@
   padding-top: 6px !important;
   padding-bottom: 6px !important;
 }
+._1tng6ym {
+  -webkit-box-flex: 0 !important;
+  flex: 0 0 16px !important;
+  text-align: left !important;
+}
 /* /Modal */
