--- a/pages/css/profile.css
+++ b/pages/css/profile.css
@@ -12532,3 +12532,216 @@ html.scrollbar-gutter[class][class] {
     overflow: clip !important;
   }
 }
+._1ou8uzt {
+  margin-bottom: 32px !important;
+}
+._1wgf3yo {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+  color: rgb(34, 34, 34) !important;
+}
+._4l12l8 {
+  margin-top: 8px !important;
+}
+._1aoj0ap {
+  box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
+  box-sizing: border-box !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 4px !important;
+  border-radius: 8px !important;
+}
+._159914b {
+  color: inherit !important;
+  display: block !important;
+  min-width: 100% !important;
+  max-width: 100% !important;
+  outline: none !important;
+  border: none !important;
+  margin: 0px !important;
+  box-sizing: border-box !important;
+  background-color: transparent !important;
+  appearance: none !important;
+  padding: 8px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+}
+._v08k6k {
+  padding-top: 16px !important;
+}
+._1h4ezu9 {
+  position: relative !important;
+  cursor: text !important;
+  display: flex !important;
+  min-height: auto !important;
+  width: 100% !important;
+  margin: 0px !important;
+  border: none !important;
+  color: black !important;
+  background-color: white !important;
+  height: auto !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+}
+._1yw7hpv {
+  position: relative !important;
+  flex: 1 1 0% !important;
+  padding: 0px !important;
+}
+._1sgu3hhe {
+  display: flex !important;
+  margin-top: 8px !important;
+  border-radius: 8px !important;
+  box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
+  color: rgb(34, 34, 34) !important;
+  background-color: rgb(255, 255, 255) !important;
+  opacity: 1 !important;
+}
+._1otaoi4o {
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  padding: 0px !important;
+  margin: 12px 12px 10px !important;
+  min-height: 1px !important;
+  color: inherit !important;
+  background-color: transparent !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  appearance: none !important;
+}
+._1w2kwxa {
+  clip: rect(0px, 0px, 0px, 0px) !important;
+  width: 1px !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  position: fixed !important;
+}
+._plk1gy {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+  margin-bottom: 8px !important;
+}
+._1fopc40 {
+  margin-bottom: 8px !important;
+}
+._4pyial {
+  -webkit-box-align: center !important;
+  display: inline-flex !important;
+  align-items: center !important;
+  padding: 12px 14px 12px 16px !important;
+  border-radius: 30px !important;
+  border: 1px solid rgb(176, 176, 176) !important;
+  margin-right: 8px !important;
+  margin-bottom: 8px !important;
+}
+._1ir6ymk {
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+._cdqlxt {
+  height: 16px !important;
+  margin-left: 12px !important;
+}
+._oda838 {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s,
+    transform 0.25s ease 0s !important;
+}
+._oda838::before {
+  content: '' !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+}
+._15rpys7s {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0 !important;
+  cursor: pointer !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  -webkit-user-select: auto !important;
+  -moz-user-select: auto !important;
+  -ms-user-select: auto !important;
+  user-select: auto !important;
+  color: #222222 !important;
+  text-decoration: underline !important;
+  border-radius: 4px !important;
+  font-weight: 600 !important;
+  text-align: inherit !important;
+  outline: none !important;
+}
+._dmn8hc {
+  -webkit-box-align: center !important;
+  -webkit-box-pack: justify !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+}
+._2lmqao {
+  position: relative !important;
+  flex: 1 1 auto !important;
+  overflow: auto !important;
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+}
+._1vb9n5m {
+  font-size: 22px !important;
+  line-height: 26px !important;
+  font-weight: 600 !important;
+  margin-bottom: 16px !important;
+  margin-top: 24px !important;
+  color: rgb(34, 34, 34) !important;
+}
+._joa4pj8 {
+  color: rgb(34, 34, 34) !important;
+}
+._hgs47m {
+  display: table !important;
+  width: 100% !important;
+  border-spacing: 0px !important;
+}
+._1thk0tsb {
+  display: table-cell !important;
+  vertical-align: top !important;
+}
+._n5lh69r {
+  display: table-cell !important;
+  width: 100% !important;
+  vertical-align: top !important;
+}
