--- a/css/utilities.css
+++ b/css/utilities.css
@@ -22,6 +22,18 @@
   transform: rotate(180deg);
 }
 
+.mr-0 {
+  margin-right: 0 !important;
+}
+
+.ml-16 {
+  margin-left: 16px;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 @media (min-width: 744px) {
   .d-md-block {
     display: block !important;
@@ -33,5 +45,11 @@
 
   .d-md-none {
     display: none !important;
+  }
+}
+
+@media (max-width: 744px) {
+  .row-reverse-xs {
+    flex-direction: row-reverse;
   }
 }
