--- a/css/components.css
+++ b/css/components.css
@@ -1377,3 +1377,40 @@
   }
 }
 /* /Modal */
+
+/* Button */
+._108mstlv {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  width: auto !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--iw-ehf-f) !important;
+  line-height: var(---s-l-myu) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  outline: none !important;
+  padding: 14px 24px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
+    -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: linear-gradient(
+    to right,
+    rgb(230, 30, 77) 0%,
+    rgb(227, 28, 95) 50%,
+    rgb(215, 4, 102) 100%
+  ) !important;
+  color: rgb(255, 255, 255) !important;
+}
+@supports (--custom: properties) ._108mstlv {
+  background: var(
+    --dls19-brand-gradient,
+    linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%)
+  ) !important;
+}
+/* /Button */
