add explore mobile

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -50,10 +50,27 @@
   .d-md-none {
     display: none !important;
   }
+
+  .d-md-flex {
+    display: flex !important;
+  }
 }
 
 @media (max-width: 744px) {
   .row-reverse-xs {
     flex-direction: row-reverse;
+  }
+  .mb-xs-16 {
+    margin-bottom: 16px !important;
+  }
+}
+
+@media (max-width: 1127px) {
+  .mw-sm-50 {
+    max-width: 50% !important;
+  }
+
+  .flex-sm-50 {
+    flex: 0 0 50% !important;
   }
 }
