--- a/pages/css/explore-2.css
+++ b/pages/css/explore-2.css
@@ -2498,3 +2498,334 @@
   color: var(--f-k-smk-x);
   font-variant-numeric: tabular-nums;
 }
+.f1aq6y3m[class][class] {
+  -webkit-transition: opacity 0.2s, height 0.2s, -webkit-transform 0.3s;
+  height: 50px;
+}
+.dir.f1aq6y3m[class][class] {
+  margin-top: 10px;
+  -webkit-transition: opacity 0.2s, height 0.2s, transform 0.3s;
+  transition: opacity 0.2s, height 0.2s, transform 0.3s;
+}
+.dir-ltr.f1aq6y3m[class][class] {
+  padding-left: 20px;
+}
+._ku1s0bb {
+  position: absolute !important;
+  height: 40px !important;
+  width: 30px !important;
+  z-index: 3 !important;
+  left: 0px !important;
+  background: -webkit-linear-gradient(
+    to right,
+    #ffffff 56.77%,
+    rgba(255, 255, 255, 0) 94.47%
+  ) !important;
+  background: -moz-linear-gradient(
+    to right,
+    #ffffff 56.77%,
+    rgba(255, 255, 255, 0) 94.47%
+  ) !important;
+  background: linear-gradient(
+    to right,
+    #ffffff 56.77%,
+    rgba(255, 255, 255, 0) 94.47%
+  ) !important;
+}
+._1yfus1e {
+  height: 100% !important;
+}
+._1xz91da {
+  margin-right: -24px !important;
+  margin-left: -24px !important;
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
+}
+._4nwxh0j {
+  -webkit-overflow-scrolling: touch !important;
+  height: 100% !important;
+  width: 100% !important;
+  overflow-y: hidden !important;
+}
+._qgvrjoy {
+  height: 100% !important;
+  overflow-y: auto !important;
+  white-space: nowrap !important;
+  overflow-x: scroll !important;
+  padding-bottom: 30px !important;
+  margin-bottom: -30px !important;
+}
+._1ddg4e5o {
+  display: inline-block !important;
+  padding-right: 4px !important;
+  padding-left: 4px !important;
+  -webkit-flex: 1 !important;
+  -ms-flex: 1 1 0% !important;
+  flex: 1 !important;
+}
+._1ddg4e5o:first-child {
+  padding-left: 24px !important;
+}
+._1kyekxh {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  margin-top: 4px !important;
+}
+._sdqx8w {
+  padding-right: 8px !important;
+}
+._v070a4 {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid black !important;
+  background-color: #ffffff !important;
+  outline: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  border-color: #dddddd !important;
+  color: #222222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  position: relative !important;
+  -webkit-transition-property: -webkit-transform, transform, background-color,
+    border-color !important;
+  -moz-transition-property: transform, background-color, border-color !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  -webkit-transition-duration: 0.15s !important;
+  transition-duration: 0.15s !important;
+  -webkit-transition-timing-function: ease-in-out !important;
+  transition-timing-function: ease-in-out !important;
+  padding-top: 6px !important;
+  padding-bottom: 6px !important;
+  padding-left: 14px !important;
+  padding-right: 14px !important;
+  border-radius: 30px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+._1t7ys8p9 {
+  display: block !important;
+  height: 0 !important;
+  overflow: hidden !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
+  background-color: #f7f7f7 !important;
+  color: #222222 !important;
+  border-color: #222222 !important;
+}
+._1t7ys8p9:after {
+  content: '' !important;
+  width: -webkit-calc(100% + 3px) !important;
+  width: -moz-calc(100% + 3px) !important;
+  width: calc(100% + 3px) !important;
+  height: -webkit-calc(100% + 2px) !important;
+  height: -moz-calc(100% + 2px) !important;
+  height: calc(100% + 2px) !important;
+  background-color: transparent !important;
+  position: absolute !important;
+  top: -1px !important;
+  left: -1px !important;
+  border-color: inherit !important;
+  border-style: solid !important;
+  border-width: 2px !important;
+  border-radius: inherit !important;
+}
+._1tzcvx13 {
+  white-space: nowrap !important;
+  overflow: auto hidden !important;
+  contain: content !important;
+  margin-top: 0px !important;
+  padding-left: 18px !important;
+  padding-right: 18px !important;
+  margin-left: -24px !important;
+  margin-right: -24px !important;
+}
+._4puvjb {
+  width: 100% !important;
+  padding: 0px 6px !important;
+  display: inline-block !important;
+  white-space: normal !important;
+  vertical-align: top !important;
+}
+._uhlm2 {
+  display: block !important;
+}
+._1mx6kqf {
+  position: relative !important;
+  width: 100% !important;
+  z-index: 0 !important;
+  padding-top: var(--dls-basecard-padding-top) !important;
+}
+._1szwzht {
+  position: absolute !important;
+  inset: 0px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+._1kklevk {
+  border-radius: 8px !important;
+  height: 100% !important;
+  overflow: hidden !important;
+  width: 100% !important;
+}
+._1trgpf1 {
+  height: 100% !important;
+  position: relative !important;
+  width: 100% !important;
+}
+._1b1idjb {
+  position: absolute !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+  width: 100% !important;
+}
+._v0gz4uz {
+  padding-top: var(--dls-liteimage-padding-top) !important;
+  position: relative !important;
+  flex: 1 1 0% !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+._4626ulj {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  position: absolute !important;
+  inset: 0px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+._91slf2a {
+  inset: 0px !important;
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+}
+@supports (object-fit: cover) {
+  ._91slf2a {
+    height: 100% !important;
+    width: 100% !important;
+    position: static !important;
+  }
+}
+._10xjrv2u {
+  display: inline-block !important;
+  vertical-align: bottom !important;
+  height: 100% !important;
+  width: 100% !important;
+  position: absolute !important;
+  inset: 0px !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+@supports (object-fit: cover) {
+  ._10xjrv2u {
+    display: none !important;
+    background-image: none !important;
+  }
+}
+._iqumj7 {
+  position: absolute !important;
+  inset: 0px !important;
+  padding: 0px 15% !important;
+  text-align: center !important;
+}
+._djxl322 {
+  display: table !important;
+  position: relative !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+._h6avcp2 {
+  margin: 0px !important;
+  word-wrap: break-word !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  font-size: 18px !important;
+  font-weight: 400 !important;
+  line-height: 1.4444444444444444em !important;
+  color: #484848 !important;
+}
+._1hm3fqf {
+  font-size: 36px !important;
+  font-weight: 800 !important;
+  letter-spacing: 0px !important;
+  line-height: 40px !important;
+  text-shadow: rgb(0 0 0 / 40%) 0px 0px 60px !important;
+}
+._snbhip0 {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--iw-ehf-f) !important;
+  line-height: var(---s-l-myu) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  outline: none !important;
+  padding: 13px 23px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
+    -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border-color: var(--f-k-smk-x) !important;
+  background: var(--f-mkcy-f) !important;
+  color: var(--f-k-smk-x) !important;
+  width: 100% !important;
+}
+._14d5b3i {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  justify-content: center !important;
+  pointer-events: none !important;
+}
+._9y3psr {
+  margin-left: 4px !important;
+  margin-right: -6px !important;
+}
+._6s0pc0 {
+  -webkit-box-align: baseline !important;
+  -webkit-box-pack: justify !important;
+  justify-content: space-between !important;
+  align-items: baseline !important;
+  display: inline-flex !important;
+  width: 100% !important;
+}
+._1vhvo6y {
+  font-size: 22px !important;
+  font-weight: 600 !important;
+  line-height: 26px !important;
+  letter-spacing: -0.6px !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: inherit !important;
+}
+@media (min-width: 910px) and (max-width: 1284px) {
+  ._3d8119q {
+    width: 50% !important;
+  }
+}
+._1h1q576 {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  margin-bottom: 16px !important;
+}
