format all css with root  with prettier

--- a/assets/css/pages/transaction_history.css
+++ b/assets/css/pages/transaction_history.css
@@ -354,7 +354,7 @@ body {
 ._14p3wn7w::before {
   border-radius: var(--i-g-gvoq) !important;
   bottom: 8px !important;
-  content: "" !important;
+  content: '' !important;
   left: -8px !important;
   position: absolute !important;
   right: -8px !important;
@@ -459,7 +459,7 @@ body {
   background-color: currentcolor !important;
   border-radius: 1px !important;
   bottom: 0px !important;
-  content: "" !important;
+  content: '' !important;
   height: 2px !important;
   left: 50% !important;
   margin-left: -9px !important;
@@ -715,7 +715,7 @@ body {
   background-color: currentcolor !important;
   border-radius: 1px !important;
   bottom: 0px !important;
-  content: "" !important;
+  content: '' !important;
   height: 2px !important;
   left: 50% !important;
   margin-left: -9px !important;
@@ -804,7 +804,7 @@ body {
   font-weight: 600 !important;
 }
 ._1ykbee0q:after {
-  content: "" !important;
+  content: '' !important;
   width: -webkit-calc(100% + 2px) !important;
   width: -moz-calc(100% + 2px) !important;
   width: calc(100% + 2px) !important;
@@ -944,7 +944,7 @@ body {
 ._1jrdohyf:target {
   display: block !important;
 }
-._1jrdohyf:target + [href="#"] {
+._1jrdohyf:target + [href='#'] {
   cursor: default !important;
   height: 100% !important;
   left: 0px !important;
@@ -1210,7 +1210,7 @@ body {
   outline: none !important;
 }
 ._14t42ha::before {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   position: absolute !important;
   top: 50% !important;
@@ -1252,7 +1252,7 @@ body {
 ._pj50dag:target {
   display: block !important;
 }
-._pj50dag:target + [href="#"] {
+._pj50dag:target + [href='#'] {
   cursor: default !important;
   height: 100% !important;
   left: 0px !important;
@@ -1532,7 +1532,7 @@ body {
 ._12hx9v3d:target {
   display: block !important;
 }
-._12hx9v3d:target + [href="#"] {
+._12hx9v3d:target + [href='#'] {
   cursor: default !important;
   height: 100% !important;
   left: 0 !important;
@@ -1626,12 +1626,12 @@ body {
   padding-left: 24px !important;
 }
 ._mwt4r90:before {
-  content: "" !important;
+  content: '' !important;
   display: table !important;
 }
 ._mwt4r90:after {
   clear: both !important;
-  content: "" !important;
+  content: '' !important;
   display: table !important;
 }
 @media (min-width: 744px) {
@@ -1929,7 +1929,7 @@ body {
   align-items: center !important; */
 }
 ._12d0llg5::after {
-  content: "" !important;
+  content: '' !important;
   display: inline-block !important;
   vertical-align: top !important;
   width: 100% !important;
@@ -2337,8 +2337,118 @@ body {
   --jaa-ni-h: 16px;
   --ic-zlb-s: 24px;
   --kc-t-qr-j: 32px;
-  --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-    "Helvetica Neue", sans-serif;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
+  --fy-rs-ca: 18px;
+  --d-ar-t-o-n: 22px;
+  --lhy-d-yl: 22px;
+  --fme-bf-w: 26px;
+  --g-zgv-nj: 26px;
+  --b-x-z-q-l-e: 30px;
+  --cv-p-u-ui: 32px;
+  --hu-t-o-g-n: 36px;
+  --hr-k-udr: 10px;
+  --dpgw-ac: 12px;
+  --f-cv-j-j-p: 12px;
+  --f-l-h-bac: 16px;
+  --c-zdwk-p: 14px;
+  --j-p-z-kco: 18px;
+  --i-nh-zme: 14px;
+  --gvarj-f: 20px;
+  --iw-ehf-f: 16px;
+  ---s-l-myu: 20px;
+  --y-g-ar-y: 16px;
+  --cb-pewj: 24px;
+  --ll-l-ys-f: 18px;
+  --f-xgviq: 24px;
+  --kmwb-ss: 18px;
+  --j-n-c-d-l-h: 28px;
+  --e-y-j-d-v-j: 400;
+  --jx-zk-pv: 600;
+  --h-oqhch: 800;
+  --g-lm-u-p: normal;
+  --mq-yk-l: 0.04em;
+}
+:root {
+  --h-l-f-om-o: 4px;
+  --go-h-jh-l: 8px;
+  --i-g-gvoq: 12px;
+  --g-ki-r-rq: 16px;
+  --j-mdfu-h: 20px;
+  --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
+  --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
+  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
+  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
+  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
+  --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
+  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
+  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --bgxgx: #000000;
+  --f-k-smk-x: #222222;
+  --fo-jk-r-s: #717171;
+  --iw-ihca: #b0b0b0;
+  --j-qkgmf: #dddddd;
+  --d-nc-lt-s: #ebebeb;
+  ---pc-g-v-g: #f7f7f7;
+  --f-mkcy-f: #ffffff;
+  --k-va-tnc: #c13515;
+  --cnr-vp-o: #b32505;
+  --f-p-k-v-lb: #fff8f6;
+  --fhi-qn-u: #e07912;
+  --k-ff-my-a: #008a05;
+  --ldbkp-d: #428bff;
+  --ihf-tp-q: #ff385c;
+  --kd-lqtg: #92174d;
+  --d-u-w-o-m-k: #460479;
+  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --d-e-vybb: radial-gradient(
+    circle at center,
+    #ff385c 0%,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  );
+  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --i-n-t-h-mj: radial-gradient(
+    circle at center,
+    #d70466 0%,
+    #bd1e59 30%,
+    #92174d 55%,
+    #861453 72.5%,
+    #6c0d63 90%,
+    #6c0d63 100%
+  );
+  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --j-m-v-dtd: radial-gradient(
+    circle at center,
+    #6c0d63 0%,
+    #59086e 30%,
+    #460479 55%,
+    #440589 72.5%,
+    #3b07bb 90%,
+    #3b07bb 100%
+  );
+  --jhzm-v-t: 16px;
+  --ikx-k-pe: 24px;
+  --kksqe-v: 32px;
+  --f-fw-z-a-i: 40px;
+  --cw-a-a-u-a: 48px;
+  --fvsvry: 64px;
+  --cy-o-aco: 80px;
+  --d-b-mrdy: 2px;
+  --h-x-sf-jw: 4px;
+  --fgg-f-l-a: 8px;
+  --b-y-unon: 12px;
+  --jaa-ni-h: 16px;
+  --ic-zlb-s: 24px;
+  --kc-t-qr-j: 32px;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
   --lhy-d-yl: 22px;
@@ -3482,11 +3592,11 @@ body {
 }
 .c1yo0219[class][class]::before {
   display: flex;
-  content: "";
+  content: '';
 }
 .c1yo0219[class][class]::after {
   display: flex;
-  content: "";
+  content: '';
 }
 .t1tuyy32[class][class] {
   position: absolute;
@@ -3724,7 +3834,7 @@ body {
   z-index: 9;
 }
 .nomreqp[class][class]::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -3863,7 +3973,7 @@ body {
   background-color: var(--f-mkcy-f);
 }
 .pnookdf[class][class]::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -5173,20 +5283,20 @@ body {
 .c39hl9j[class][class]:target {
   display: block;
 }
-.c39hl9j[class][class]:target + [href="#"] {
+.c39hl9j[class][class]:target + [href='#'] {
   height: 100%;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1;
 }
-.dir.c39hl9j[class][class]:target + [href="#"] {
+.dir.c39hl9j[class][class]:target + [href='#'] {
   cursor: default;
 }
-.dir-ltr.c39hl9j[class][class]:target + [href="#"] {
+.dir-ltr.c39hl9j[class][class]:target + [href='#'] {
   left: 0;
 }
-.dir-rtl.c39hl9j[class][class]:target + [href="#"] {
+.dir-rtl.c39hl9j[class][class]:target + [href='#'] {
   right: 0;
 }
 .d7qkrn2[class][class] {
@@ -5465,7 +5575,7 @@ body {
   line-height: 18px !important;
   letter-spacing: normal !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   margin-right: 24px !important;
   border-bottom-color: rgb(0, 132, 137) !important;
   color: rgb(0, 132, 137) !important;
@@ -5519,7 +5629,7 @@ body {
 }
 
 ._2h22gn::before {
-  content: " " !important;
+  content: ' ' !important;
   display: table !important;
 }
 ._j6urmsh {
@@ -5585,7 +5695,7 @@ body {
   line-height: 24px !important;
   letter-spacing: normal !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   color: rgb(72, 72, 72) !important;
   padding: 11px 40px 11px 11px !important;
   font-weight: normal !important;
@@ -5674,7 +5784,7 @@ body {
   margin: 0px !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 18px !important;
   font-weight: 800 !important;
   line-height: 1.44444em !important;
@@ -5685,7 +5795,7 @@ body {
   margin: 0px !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 18px !important;
   font-weight: 400 !important;
   line-height: 1.44444em !important;
@@ -5702,7 +5812,7 @@ body {
   line-height: 22px !important;
   letter-spacing: normal !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   border-radius: 4px !important;
   border-style: solid !important;
   border-width: 1px !important;
@@ -5785,7 +5895,7 @@ body {
   line-height: 24px !important;
   letter-spacing: normal !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   color: rgb(72, 72, 72) !important;
   padding-top: 11px !important;
   padding-bottom: 11px !important;
@@ -5806,7 +5916,7 @@ body {
   margin: 0px !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 16px !important;
   font-weight: 400 !important;
   line-height: 1.375em !important;
