--- a/assets/css/pages/calendar_agenda.css
+++ b/assets/css/pages/calendar_agenda.css
@@ -356,7 +356,7 @@ body {
   margin: 0px !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 12px !important;
   font-weight: 800 !important;
   line-height: 1.33333em !important;
@@ -459,7 +459,7 @@ body {
   margin: 0px !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 24px !important;
   font-weight: 600 !important;
   line-height: 1.25em !important;
@@ -470,7 +470,7 @@ body {
   margin: 0px !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 24px !important;
   font-weight: 600 !important;
   line-height: 1.25em !important;
@@ -781,7 +781,7 @@ body {
   color: #222222 !important;
 }
 ._13xhdjz2:hover::after {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   width: 100% !important;
   height: 3px !important;
@@ -815,7 +815,7 @@ body {
   color: #222222 !important;
 }
 ._ywzjut3:hover::after {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   width: 100% !important;
   height: 3px !important;
@@ -825,7 +825,7 @@ body {
   z-index: 1999 !important;
 }
 ._ywzjut3::after {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   width: 100% !important;
   height: 3px !important;
@@ -887,7 +887,7 @@ body {
   outline: 0px !important;
 }
 ._4syaavn:hover::after {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   width: 28px !important;
   height: 3px !important;
@@ -1161,7 +1161,7 @@ body {
   margin: 0px !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 10px !important;
   font-weight: 400 !important;
   line-height: 1.2em !important;
@@ -1834,7 +1834,7 @@ body {
   outline: none !important;
 }
 ._oda838::before {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   position: absolute !important;
   top: 50% !important;
@@ -2174,7 +2174,7 @@ body {
   margin: 0px !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 18px !important;
   font-weight: 800 !important;
   line-height: 1.44444em !important;
@@ -2445,8 +2445,118 @@ body {
   --jaa-ni-h: 16px;
   --ic-zlb-s: 24px;
   --kc-t-qr-j: 32px;
-  --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-    "Helvetica Neue", sans-serif;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
+  --fy-rs-ca: 18px;
+  --d-ar-t-o-n: 22px;
+  --lhy-d-yl: 22px;
+  --fme-bf-w: 26px;
+  --g-zgv-nj: 26px;
+  --b-x-z-q-l-e: 30px;
+  --cv-p-u-ui: 32px;
+  --hu-t-o-g-n: 36px;
+  --hr-k-udr: 10px;
+  --dpgw-ac: 12px;
+  --f-cv-j-j-p: 12px;
+  --f-l-h-bac: 16px;
+  --c-zdwk-p: 14px;
+  --j-p-z-kco: 18px;
+  --i-nh-zme: 14px;
+  --gvarj-f: 20px;
+  --iw-ehf-f: 16px;
+  ---s-l-myu: 20px;
+  --y-g-ar-y: 16px;
+  --cb-pewj: 24px;
+  --ll-l-ys-f: 18px;
+  --f-xgviq: 24px;
+  --kmwb-ss: 18px;
+  --j-n-c-d-l-h: 28px;
+  --e-y-j-d-v-j: 400;
+  --jx-zk-pv: 600;
+  --h-oqhch: 800;
+  --g-lm-u-p: normal;
+  --mq-yk-l: 0.04em;
+}
+:root {
+  --h-l-f-om-o: 4px;
+  --go-h-jh-l: 8px;
+  --i-g-gvoq: 12px;
+  --g-ki-r-rq: 16px;
+  --j-mdfu-h: 20px;
+  --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
+  --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
+  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
+  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
+  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
+  --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
+  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
+  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --bgxgx: #000000;
+  --f-k-smk-x: #222222;
+  --fo-jk-r-s: #717171;
+  --iw-ihca: #b0b0b0;
+  --j-qkgmf: #dddddd;
+  --d-nc-lt-s: #ebebeb;
+  ---pc-g-v-g: #f7f7f7;
+  --f-mkcy-f: #ffffff;
+  --k-va-tnc: #c13515;
+  --cnr-vp-o: #b32505;
+  --f-p-k-v-lb: #fff8f6;
+  --fhi-qn-u: #e07912;
+  --k-ff-my-a: #008a05;
+  --ldbkp-d: #428bff;
+  --ihf-tp-q: #ff385c;
+  --kd-lqtg: #92174d;
+  --d-u-w-o-m-k: #460479;
+  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --d-e-vybb: radial-gradient(
+    circle at center,
+    #ff385c 0%,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  );
+  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --i-n-t-h-mj: radial-gradient(
+    circle at center,
+    #d70466 0%,
+    #bd1e59 30%,
+    #92174d 55%,
+    #861453 72.5%,
+    #6c0d63 90%,
+    #6c0d63 100%
+  );
+  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --j-m-v-dtd: radial-gradient(
+    circle at center,
+    #6c0d63 0%,
+    #59086e 30%,
+    #460479 55%,
+    #440589 72.5%,
+    #3b07bb 90%,
+    #3b07bb 100%
+  );
+  --jhzm-v-t: 16px;
+  --ikx-k-pe: 24px;
+  --kksqe-v: 32px;
+  --f-fw-z-a-i: 40px;
+  --cw-a-a-u-a: 48px;
+  --fvsvry: 64px;
+  --cy-o-aco: 80px;
+  --d-b-mrdy: 2px;
+  --h-x-sf-jw: 4px;
+  --fgg-f-l-a: 8px;
+  --b-y-unon: 12px;
+  --jaa-ni-h: 16px;
+  --ic-zlb-s: 24px;
+  --kc-t-qr-j: 32px;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
   --lhy-d-yl: 22px;
@@ -2479,11 +2589,11 @@ body {
 }
 .c1yo0219[class][class]::before {
   display: flex;
-  content: "";
+  content: '';
 }
 .c1yo0219[class][class]::after {
   display: flex;
-  content: "";
+  content: '';
 }
 .l1tdvn0e[class][class] {
   appearance: none;
@@ -4125,7 +4235,7 @@ body {
   line-height: 22px !important;
   letter-spacing: normal !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   color: rgb(255, 255, 255) !important;
   padding-bottom: 14px !important;
   font-weight: 800 !important;
@@ -4144,7 +4254,7 @@ body {
   border-radius: 8px !important;
   box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 400 !important;
@@ -4167,7 +4277,7 @@ body {
   pointer-events: none !important;
   transform-origin: 0% 0% !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 16px !important;
   line-height: 20px !important;
   transition: -ms-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s,
@@ -4231,7 +4341,7 @@ body {
   color: rgb(34, 34, 34) !important;
   border-radius: 8px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 400 !important;
@@ -4303,7 +4413,7 @@ body {
   border-radius: 8px !important;
   box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 400 !important;
@@ -4326,7 +4436,7 @@ body {
   pointer-events: none !important;
   transform-origin: 0% 0% !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 16px !important;
   line-height: 20px !important;
   transition: -ms-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s,
@@ -4419,7 +4529,7 @@ body {
   border-radius: 8px !important;
   box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 400 !important;
