--- a/assets/css/pages/insights.css
+++ b/assets/css/pages/insights.css
@@ -197,7 +197,7 @@ body {
   color: #222222 !important;
 }
 ._13xhdjz2:hover::after {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   width: 100% !important;
   height: 3px !important;
@@ -231,7 +231,7 @@ body {
   color: #222222 !important;
 }
 ._ywzjut3:hover::after {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   width: 100% !important;
   height: 3px !important;
@@ -241,7 +241,7 @@ body {
   z-index: 1999 !important;
 }
 ._ywzjut3::after {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   width: 100% !important;
   height: 3px !important;
@@ -303,7 +303,7 @@ body {
   outline: 0px !important;
 }
 ._4syaavn:hover::after {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   width: 28px !important;
   height: 3px !important;
@@ -471,7 +471,7 @@ body {
   font-weight: 800 !important;
 }
 ._dw82l6q:after {
-  content: "" !important;
+  content: '' !important;
   width: -webkit-calc(100% + 2px) !important;
   width: -moz-calc(100% + 2px) !important;
   width: calc(100% + 2px) !important;
@@ -588,7 +588,7 @@ body {
   }
 }
 ._1jw0pctt:after {
-  content: "" !important;
+  content: '' !important;
   width: -webkit-calc(100% + 2px) !important;
   width: -moz-calc(100% + 2px) !important;
   width: calc(100% + 2px) !important;
@@ -1555,8 +1555,118 @@ body {
   --jaa-ni-h: 16px;
   --ic-zlb-s: 24px;
   --kc-t-qr-j: 32px;
-  --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-    "Helvetica Neue", sans-serif;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
+  --fy-rs-ca: 18px;
+  --d-ar-t-o-n: 22px;
+  --lhy-d-yl: 22px;
+  --fme-bf-w: 26px;
+  --g-zgv-nj: 26px;
+  --b-x-z-q-l-e: 30px;
+  --cv-p-u-ui: 32px;
+  --hu-t-o-g-n: 36px;
+  --hr-k-udr: 10px;
+  --dpgw-ac: 12px;
+  --f-cv-j-j-p: 12px;
+  --f-l-h-bac: 16px;
+  --c-zdwk-p: 14px;
+  --j-p-z-kco: 18px;
+  --i-nh-zme: 14px;
+  --gvarj-f: 20px;
+  --iw-ehf-f: 16px;
+  ---s-l-myu: 20px;
+  --y-g-ar-y: 16px;
+  --cb-pewj: 24px;
+  --ll-l-ys-f: 18px;
+  --f-xgviq: 24px;
+  --kmwb-ss: 18px;
+  --j-n-c-d-l-h: 28px;
+  --e-y-j-d-v-j: 400;
+  --jx-zk-pv: 600;
+  --h-oqhch: 800;
+  --g-lm-u-p: normal;
+  --mq-yk-l: 0.04em;
+}
+:root {
+  --h-l-f-om-o: 4px;
+  --go-h-jh-l: 8px;
+  --i-g-gvoq: 12px;
+  --g-ki-r-rq: 16px;
+  --j-mdfu-h: 20px;
+  --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
+  --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
+  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
+  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
+  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
+  --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
+  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
+  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --bgxgx: #000000;
+  --f-k-smk-x: #222222;
+  --fo-jk-r-s: #717171;
+  --iw-ihca: #b0b0b0;
+  --j-qkgmf: #dddddd;
+  --d-nc-lt-s: #ebebeb;
+  ---pc-g-v-g: #f7f7f7;
+  --f-mkcy-f: #ffffff;
+  --k-va-tnc: #c13515;
+  --cnr-vp-o: #b32505;
+  --f-p-k-v-lb: #fff8f6;
+  --fhi-qn-u: #e07912;
+  --k-ff-my-a: #008a05;
+  --ldbkp-d: #428bff;
+  --ihf-tp-q: #ff385c;
+  --kd-lqtg: #92174d;
+  --d-u-w-o-m-k: #460479;
+  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --d-e-vybb: radial-gradient(
+    circle at center,
+    #ff385c 0%,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  );
+  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --i-n-t-h-mj: radial-gradient(
+    circle at center,
+    #d70466 0%,
+    #bd1e59 30%,
+    #92174d 55%,
+    #861453 72.5%,
+    #6c0d63 90%,
+    #6c0d63 100%
+  );
+  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --j-m-v-dtd: radial-gradient(
+    circle at center,
+    #6c0d63 0%,
+    #59086e 30%,
+    #460479 55%,
+    #440589 72.5%,
+    #3b07bb 90%,
+    #3b07bb 100%
+  );
+  --jhzm-v-t: 16px;
+  --ikx-k-pe: 24px;
+  --kksqe-v: 32px;
+  --f-fw-z-a-i: 40px;
+  --cw-a-a-u-a: 48px;
+  --fvsvry: 64px;
+  --cy-o-aco: 80px;
+  --d-b-mrdy: 2px;
+  --h-x-sf-jw: 4px;
+  --fgg-f-l-a: 8px;
+  --b-y-unon: 12px;
+  --jaa-ni-h: 16px;
+  --ic-zlb-s: 24px;
+  --kc-t-qr-j: 32px;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
   --lhy-d-yl: 22px;
@@ -1589,11 +1699,11 @@ body {
 }
 .c1yo0219[class][class]::before {
   display: flex;
-  content: "";
+  content: '';
 }
 .c1yo0219[class][class]::after {
   display: flex;
-  content: "";
+  content: '';
 }
 .l1tdvn0e[class][class] {
   appearance: none;
@@ -2315,7 +2425,7 @@ body {
   z-index: 9;
 }
 .nomreqp[class][class]::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -2454,7 +2564,7 @@ body {
   background-color: var(--f-mkcy-f);
 }
 .pnookdf[class][class]::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -4083,7 +4193,7 @@ body {
   margin: 0px !important;
   color: rgb(34, 34, 34) !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   position: relative !important;
   transition-property: -ms-transform, -webkit-transform, transform,
     background-color, border-color !important;
