--- a/assets/css/pages/payment.css
+++ b/assets/css/pages/payment.css
@@ -129,7 +129,7 @@ body {
     #000,
     rgba(0, 0, 0, 0)
   ) !important;
-  content: "" !important;
+  content: '' !important;
   height: 140% !important;
   left: 0 !important;
   opacity: 0 !important;
@@ -155,7 +155,7 @@ body {
   -ms-transform-origin: 50% 0% !important;
   transform-origin: 50% 0% !important;
   background: var(--f-mkcy-f) !important;
-  content: "" !important;
+  content: '' !important;
   left: 0 !important;
   position: absolute !important;
   top: 0 !important;
@@ -310,7 +310,7 @@ body {
 ._1f41ax74::before {
   border-radius: var(--i-g-gvoq) !important;
   bottom: 8px !important;
-  content: "" !important;
+  content: '' !important;
   left: -8px !important;
   position: absolute !important;
   right: -8px !important;
@@ -620,7 +620,7 @@ body {
 ._12hx9v3d:target {
   display: block !important;
 }
-._12hx9v3d:target + [href="#"] {
+._12hx9v3d:target + [href='#'] {
   cursor: default !important;
   height: 100% !important;
   left: 0 !important;
@@ -855,7 +855,7 @@ body {
 }
 
 ._1qi0sj8::before {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   position: absolute !important;
   top: 50% !important;
@@ -1334,8 +1334,118 @@ body {
   --jaa-ni-h: 16px;
   --ic-zlb-s: 24px;
   --kc-t-qr-j: 32px;
-  --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-    "Helvetica Neue", sans-serif;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
+  --fy-rs-ca: 18px;
+  --d-ar-t-o-n: 22px;
+  --lhy-d-yl: 22px;
+  --fme-bf-w: 26px;
+  --g-zgv-nj: 26px;
+  --b-x-z-q-l-e: 30px;
+  --cv-p-u-ui: 32px;
+  --hu-t-o-g-n: 36px;
+  --hr-k-udr: 10px;
+  --dpgw-ac: 12px;
+  --f-cv-j-j-p: 12px;
+  --f-l-h-bac: 16px;
+  --c-zdwk-p: 14px;
+  --j-p-z-kco: 18px;
+  --i-nh-zme: 14px;
+  --gvarj-f: 20px;
+  --iw-ehf-f: 16px;
+  ---s-l-myu: 20px;
+  --y-g-ar-y: 16px;
+  --cb-pewj: 24px;
+  --ll-l-ys-f: 18px;
+  --f-xgviq: 24px;
+  --kmwb-ss: 18px;
+  --j-n-c-d-l-h: 28px;
+  --e-y-j-d-v-j: 400;
+  --jx-zk-pv: 600;
+  --h-oqhch: 800;
+  --g-lm-u-p: normal;
+  --mq-yk-l: 0.04em;
+}
+:root {
+  --h-l-f-om-o: 4px;
+  --go-h-jh-l: 8px;
+  --i-g-gvoq: 12px;
+  --g-ki-r-rq: 16px;
+  --j-mdfu-h: 20px;
+  --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
+  --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
+  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
+  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
+  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
+  --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
+  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
+  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --bgxgx: #000000;
+  --f-k-smk-x: #222222;
+  --fo-jk-r-s: #717171;
+  --iw-ihca: #b0b0b0;
+  --j-qkgmf: #dddddd;
+  --d-nc-lt-s: #ebebeb;
+  ---pc-g-v-g: #f7f7f7;
+  --f-mkcy-f: #ffffff;
+  --k-va-tnc: #c13515;
+  --cnr-vp-o: #b32505;
+  --f-p-k-v-lb: #fff8f6;
+  --fhi-qn-u: #e07912;
+  --k-ff-my-a: #008a05;
+  --ldbkp-d: #428bff;
+  --ihf-tp-q: #ff385c;
+  --kd-lqtg: #92174d;
+  --d-u-w-o-m-k: #460479;
+  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --d-e-vybb: radial-gradient(
+    circle at center,
+    #ff385c 0%,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  );
+  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --i-n-t-h-mj: radial-gradient(
+    circle at center,
+    #d70466 0%,
+    #bd1e59 30%,
+    #92174d 55%,
+    #861453 72.5%,
+    #6c0d63 90%,
+    #6c0d63 100%
+  );
+  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --j-m-v-dtd: radial-gradient(
+    circle at center,
+    #6c0d63 0%,
+    #59086e 30%,
+    #460479 55%,
+    #440589 72.5%,
+    #3b07bb 90%,
+    #3b07bb 100%
+  );
+  --jhzm-v-t: 16px;
+  --ikx-k-pe: 24px;
+  --kksqe-v: 32px;
+  --f-fw-z-a-i: 40px;
+  --cw-a-a-u-a: 48px;
+  --fvsvry: 64px;
+  --cy-o-aco: 80px;
+  --d-b-mrdy: 2px;
+  --h-x-sf-jw: 4px;
+  --fgg-f-l-a: 8px;
+  --b-y-unon: 12px;
+  --jaa-ni-h: 16px;
+  --ic-zlb-s: 24px;
+  --kc-t-qr-j: 32px;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
   --lhy-d-yl: 22px;
@@ -1368,11 +1478,11 @@ body {
 }
 .c1yo0219[class][class]::before {
   display: flex;
-  content: "";
+  content: '';
 }
 .c1yo0219[class][class]::after {
   display: flex;
-  content: "";
+  content: '';
 }
 .t2pjd0h[class][class] {
   top: 0;
@@ -1627,7 +1737,7 @@ html.scrollbar-gutter[class][class] {
   z-index: 9;
 }
 .nomreqp[class][class]::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -1766,7 +1876,7 @@ html.scrollbar-gutter[class][class] {
   background-color: var(--f-mkcy-f);
 }
 .pnookdf[class][class]::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -2182,11 +2292,11 @@ html.scrollbar-gutter[class][class] {
 }
 .c1yo0219[class][class]::before {
   display: flex;
-  content: "";
+  content: '';
 }
 .c1yo0219[class][class]::after {
   display: flex;
-  content: "";
+  content: '';
 }
 .s1e5vr6n[class][class] {
   display: block;
@@ -3916,7 +4026,7 @@ html.scrollbar-gutter[class][class] {
 }
 .c1jdlqzl[class][class]::before {
   bottom: 0;
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   z-index: 0;
@@ -4282,20 +4392,20 @@ html.scrollbar-gutter[class][class] {
 .c39hl9j[class][class]:target {
   display: block;
 }
-.c39hl9j[class][class]:target + [href="#"] {
+.c39hl9j[class][class]:target + [href='#'] {
   height: 100%;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1;
 }
-.dir.c39hl9j[class][class]:target + [href="#"] {
+.dir.c39hl9j[class][class]:target + [href='#'] {
   cursor: default;
 }
-.dir-ltr.c39hl9j[class][class]:target + [href="#"] {
+.dir-ltr.c39hl9j[class][class]:target + [href='#'] {
   left: 0;
 }
-.dir-rtl.c39hl9j[class][class]:target + [href="#"] {
+.dir-rtl.c39hl9j[class][class]:target + [href='#'] {
   right: 0;
 }
 .l1tdvn0e[class][class] {
@@ -5149,7 +5259,7 @@ html.scrollbar-gutter[class][class] {
 }
 .c13cw3wj[class][class]::before {
   bottom: 8px;
-  content: "";
+  content: '';
   position: absolute;
   top: 8px;
 }
@@ -5219,7 +5329,7 @@ html.scrollbar-gutter[class][class] {
   right: 0;
 }
 .c15gdd3h[class][class]::before {
-  content: "";
+  content: '';
   height: 140%;
   opacity: 0;
   pointer-events: none;
@@ -5251,7 +5361,7 @@ html.scrollbar-gutter[class][class] {
   -webkit-transform-origin: 50% 0%;
   -ms-transform-origin: 50% 0%;
   transition: transform 150ms ease, opacity 150ms ease 75ms;
-  content: "";
+  content: '';
   height: 100%;
   opacity: 0;
   position: absolute;
@@ -6125,7 +6235,7 @@ html.scrollbar-gutter[class][class] {
   outline: none;
 }
 .b192dx2b[class][class]::before {
-  content: "";
+  content: '';
   display: none;
   height: 32px;
   position: absolute;
@@ -6148,7 +6258,7 @@ html.scrollbar-gutter[class][class] {
 }
 .b192dx2b[class][class]::after {
   bottom: 0;
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   z-index: 0;
@@ -6508,7 +6618,7 @@ html.scrollbar-gutter[class][class] {
   background: transparent;
 }
 .vbhq8fp[class][class]::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 50%;
@@ -6722,7 +6832,7 @@ html.scrollbar-gutter[class][class] {
 }
 .b134py57[class][class]::before {
   bottom: 0;
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   transition: 0.2s opacity var(---bz-mmq);
@@ -6958,7 +7068,7 @@ html.scrollbar-gutter[class][class] {
   padding: 14px 32px;
 }
 .i11g7f5s[class][class]::before {
-  content: "";
+  content: '';
   display: none;
   height: 32px;
   position: absolute;
@@ -6979,7 +7089,7 @@ html.scrollbar-gutter[class][class] {
 }
 .i11g7f5s[class][class]::after {
   bottom: 0;
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   z-index: 0;
@@ -7306,7 +7416,7 @@ html.scrollbar-gutter[class][class] {
   }
 }
 .tnrruw1[class][class]:after {
-  content: "";
+  content: '';
   height: 2px;
   inset-inline: 0;
   position: absolute;
@@ -7719,7 +7829,7 @@ html.scrollbar-gutter[class][class] {
   }
 }
 .t8hyirr[class][class]:after {
-  content: "";
+  content: '';
   height: 2px;
   inset-inline: 0;
   position: absolute;
@@ -9231,7 +9341,7 @@ html.scrollbar-gutter[class][class] {
   line-height: 24px !important;
   letter-spacing: normal !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   color: rgb(72, 72, 72) !important;
   padding: 16px 40px 16px 16px !important;
   font-weight: normal !important;
@@ -9447,7 +9557,7 @@ html.scrollbar-gutter[class][class] {
   align-items: center !important;
   display: flex !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif !important;
+    'Helvetica Neue', sans-serif !important;
   font-weight: 400 !important;
   font-size: 12px !important;
   line-height: 16px !important;
