--- a/assets/css/pages/specific_trip.css
+++ b/assets/css/pages/specific_trip.css
@@ -64,7 +64,7 @@ body {
     #000,
     rgba(0, 0, 0, 0)
   ) !important;
-  content: "" !important;
+  content: '' !important;
   height: 140% !important;
   left: 0 !important;
   opacity: 0 !important;
@@ -90,7 +90,7 @@ body {
   -ms-transform-origin: 50% 0% !important;
   transform-origin: 50% 0% !important;
   background: var(--f-mkcy-f) !important;
-  content: "" !important;
+  content: '' !important;
   left: 0 !important;
   position: absolute !important;
   top: 0 !important;
@@ -240,7 +240,7 @@ body {
 ._1f41ax74::before {
   border-radius: var(--i-g-gvoq) !important;
   bottom: 8px !important;
-  content: "" !important;
+  content: '' !important;
   left: -8px !important;
   position: absolute !important;
   right: -8px !important;
@@ -494,7 +494,7 @@ body {
 ._12hx9v3d:target {
   display: block !important;
 }
-._12hx9v3d:target + [href="#"] {
+._12hx9v3d:target + [href='#'] {
   cursor: default !important;
   height: 100% !important;
   left: 0 !important;
@@ -762,7 +762,7 @@ body {
     top: 0px !important;
     width: 10px !important;
     height: 100% !important;
-    content: "" !important;
+    content: '' !important;
     z-index: 5 !important;
   }
 }
@@ -869,7 +869,7 @@ body {
     top: 0px !important;
     width: 10px !important;
     height: 100% !important;
-    content: "" !important;
+    content: '' !important;
     z-index: 5 !important;
   }
   @media print {
@@ -1173,7 +1173,7 @@ body {
   outline: none !important;
 }
 ._oda838::before {
-  content: "" !important;
+  content: '' !important;
   display: block !important;
   position: absolute !important;
   top: 50% !important;
@@ -1199,12 +1199,12 @@ body {
   padding-left: 24px !important;
 }
 ._mwt4r90:before {
-  content: "" !important;
+  content: '' !important;
   display: table !important;
 }
 ._mwt4r90:after {
   clear: both !important;
-  content: "" !important;
+  content: '' !important;
   display: table !important;
 }
 @media (min-width: 744px) {
@@ -3021,8 +3021,118 @@ body {
   --jaa-ni-h: 16px;
   --ic-zlb-s: 24px;
   --kc-t-qr-j: 32px;
-  --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-    "Helvetica Neue", sans-serif;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
+  --fy-rs-ca: 18px;
+  --d-ar-t-o-n: 22px;
+  --lhy-d-yl: 22px;
+  --fme-bf-w: 26px;
+  --g-zgv-nj: 26px;
+  --b-x-z-q-l-e: 30px;
+  --cv-p-u-ui: 32px;
+  --hu-t-o-g-n: 36px;
+  --hr-k-udr: 10px;
+  --dpgw-ac: 12px;
+  --f-cv-j-j-p: 12px;
+  --f-l-h-bac: 16px;
+  --c-zdwk-p: 14px;
+  --j-p-z-kco: 18px;
+  --i-nh-zme: 14px;
+  --gvarj-f: 20px;
+  --iw-ehf-f: 16px;
+  ---s-l-myu: 20px;
+  --y-g-ar-y: 16px;
+  --cb-pewj: 24px;
+  --ll-l-ys-f: 18px;
+  --f-xgviq: 24px;
+  --kmwb-ss: 18px;
+  --j-n-c-d-l-h: 28px;
+  --e-y-j-d-v-j: 400;
+  --jx-zk-pv: 600;
+  --h-oqhch: 800;
+  --g-lm-u-p: normal;
+  --mq-yk-l: 0.04em;
+}
+:root {
+  --h-l-f-om-o: 4px;
+  --go-h-jh-l: 8px;
+  --i-g-gvoq: 12px;
+  --g-ki-r-rq: 16px;
+  --j-mdfu-h: 20px;
+  --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
+  --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
+  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
+  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
+  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
+  --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
+  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
+  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --bgxgx: #000000;
+  --f-k-smk-x: #222222;
+  --fo-jk-r-s: #717171;
+  --iw-ihca: #b0b0b0;
+  --j-qkgmf: #dddddd;
+  --d-nc-lt-s: #ebebeb;
+  ---pc-g-v-g: #f7f7f7;
+  --f-mkcy-f: #ffffff;
+  --k-va-tnc: #c13515;
+  --cnr-vp-o: #b32505;
+  --f-p-k-v-lb: #fff8f6;
+  --fhi-qn-u: #e07912;
+  --k-ff-my-a: #008a05;
+  --ldbkp-d: #428bff;
+  --ihf-tp-q: #ff385c;
+  --kd-lqtg: #92174d;
+  --d-u-w-o-m-k: #460479;
+  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --d-e-vybb: radial-gradient(
+    circle at center,
+    #ff385c 0%,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  );
+  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --i-n-t-h-mj: radial-gradient(
+    circle at center,
+    #d70466 0%,
+    #bd1e59 30%,
+    #92174d 55%,
+    #861453 72.5%,
+    #6c0d63 90%,
+    #6c0d63 100%
+  );
+  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --j-m-v-dtd: radial-gradient(
+    circle at center,
+    #6c0d63 0%,
+    #59086e 30%,
+    #460479 55%,
+    #440589 72.5%,
+    #3b07bb 90%,
+    #3b07bb 100%
+  );
+  --jhzm-v-t: 16px;
+  --ikx-k-pe: 24px;
+  --kksqe-v: 32px;
+  --f-fw-z-a-i: 40px;
+  --cw-a-a-u-a: 48px;
+  --fvsvry: 64px;
+  --cy-o-aco: 80px;
+  --d-b-mrdy: 2px;
+  --h-x-sf-jw: 4px;
+  --fgg-f-l-a: 8px;
+  --b-y-unon: 12px;
+  --jaa-ni-h: 16px;
+  --ic-zlb-s: 24px;
+  --kc-t-qr-j: 32px;
+  --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
   --fy-rs-ca: 18px;
   --d-ar-t-o-n: 22px;
   --lhy-d-yl: 22px;
@@ -3055,11 +3165,11 @@ body {
 }
 .c1yo0219[class][class]::before {
   display: flex;
-  content: "";
+  content: '';
 }
 .c1yo0219[class][class]::after {
   display: flex;
-  content: "";
+  content: '';
 }
 .t2pjd0h[class][class] {
   top: 0;
@@ -3534,7 +3644,7 @@ html.scrollbar-gutter[class][class] {
   transition: transform 300ms cubic-bezier(0, 1.52, 0.51, 0.91);
 }
 .c1kg0ity[class][class]::before {
-  content: "";
+  content: '';
   height: 48px;
   position: absolute;
   top: 50%;
@@ -4125,7 +4235,7 @@ html.scrollbar-gutter[class][class] {
   display: grid;
   grid-template: var(
     --contentscroller_layout_grid-template,
-    "header" "scroller" "footer" / minmax(0, 1fr)
+    'header' 'scroller' 'footer' / minmax(0, 1fr)
   );
 }
 .c14whb16[class][class] {
@@ -5082,7 +5192,7 @@ html.scrollbar-gutter[class][class] {
   }
 }
 .cza9200[class][class]::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   bottom: 0;
@@ -6542,7 +6652,7 @@ html.scrollbar-gutter[class][class] {
 }
 .c1jdlqzl[class][class]::before {
   bottom: 0;
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   z-index: 0;
@@ -6908,20 +7018,20 @@ html.scrollbar-gutter[class][class] {
 .c39hl9j[class][class]:target {
   display: block;
 }
-.c39hl9j[class][class]:target + [href="#"] {
+.c39hl9j[class][class]:target + [href='#'] {
   height: 100%;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1;
 }
-.dir.c39hl9j[class][class]:target + [href="#"] {
+.dir.c39hl9j[class][class]:target + [href='#'] {
   cursor: default;
 }
-.dir-ltr.c39hl9j[class][class]:target + [href="#"] {
+.dir-ltr.c39hl9j[class][class]:target + [href='#'] {
   left: 0;
 }
-.dir-rtl.c39hl9j[class][class]:target + [href="#"] {
+.dir-rtl.c39hl9j[class][class]:target + [href='#'] {
   right: 0;
 }
 .c13cw3wj[class][class] {
@@ -6956,7 +7066,7 @@ html.scrollbar-gutter[class][class] {
 }
 .c13cw3wj[class][class]::before {
   bottom: 8px;
-  content: "";
+  content: '';
   position: absolute;
   top: 8px;
 }
@@ -7034,7 +7144,7 @@ html.scrollbar-gutter[class][class] {
   right: 0;
 }
 .c15gdd3h[class][class]::before {
-  content: "";
+  content: '';
   height: 140%;
   opacity: 0;
   pointer-events: none;
@@ -7066,7 +7176,7 @@ html.scrollbar-gutter[class][class] {
   -webkit-transform-origin: 50% 0%;
   -ms-transform-origin: 50% 0%;
   transition: transform 150ms ease, opacity 150ms ease 75ms;
-  content: "";
+  content: '';
   height: 100%;
   opacity: 0;
   position: absolute;
