fix homepage bugs

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -21461,7 +21461,7 @@ h6:first-child {
 }
 ._1tt196k {
   -webkit-box-align: center !important;
-  display: flex !important;
+  display: flex;
   align-items: center !important;
   border-top: 1px solid #ebebeb !important;
   position: fixed !important;
