--- a/assets/css/pages/payment.css
+++ b/assets/css/pages/payment.css
@@ -5935,42 +5935,42 @@ body {
   color: #222 !important;
   font-weight: 600 !important;
 }
-._1boqbzp {
+.footer {
   position: relative !important;
   background-color: #f7f7f7 !important;
   border-top: 1px solid #ddd !important;
 }
-._1s94zl78 {
+.footer__container {
   padding-left: 24px !important;
   padding-right: 24px !important;
   margin: 0 auto !important;
   max-width: 1440px !important;
 }
 @supports (--a: a) {
-  ._1s94zl78 {
+  .footer__container {
     max-width: var(--page-shell-max-content-width, 1440px) !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 80px !important;
     padding-right: 80px !important;
   }
 }
 @media (min-width: 950px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 744px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 375px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 24px !important;
     padding-right: 24px !important;
   }
@@ -6037,39 +6037,39 @@ body {
     padding-right: 2px !important;
   }
 }
-._1br4kkl {
+.footer__copyright-text {
   font-size: 14px !important;
   line-height: 18px !important;
   color: #222 !important;
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  ._1br4kkl {
+  .footer__copyright-text {
     margin-right: 19px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._opoa3c {
+  .footer__utility {
     display: inline-block !important;
     margin-left: -19px !important;
   }
 }
-._j8ldew {
+.footer__utility-spacer-wrapper {
   display: none !important;
 }
 @media (min-width: 1128px) {
-  ._j8ldew {
+  .footer__utility-spacer-wrapper {
     display: inline-block !important;
   }
 }
-._15vc6yg {
+.footer__utility-spacer {
   display: inline-block !important;
   text-align: center !important;
   width: 19px !important;
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._1e6wtwm5 {
+.footer__link {
   font-family: inherit !important;
   font-weight: inherit !important;
   font-style: inherit !important;
@@ -6102,16 +6102,16 @@ body {
 ._xh0r19 {
   margin-left: 32px !important;
 }
-._115qwnm {
+.footer__social {
   list-style: none !important;
   margin: 0 !important;
   padding: 0 !important;
   display: flex !important;
 }
-._kdkpwk:not(:last-child) {
+.footer__social-item:not(:last-child) {
   margin-right: 24px !important;
 }
-._1vwyakty {
+.footer__social-link {
   font-size: inherit !important;
   font-family: inherit !important;
   font-weight: inherit !important;
@@ -6206,4 +6206,3 @@ body {
     padding-right: env(safe-area-inset-right) !important;
   }
 }
-
