--- a/assets/css/pages/products.css
+++ b/assets/css/pages/products.css
@@ -7994,46 +7994,46 @@ h6:first-child {
     padding-bottom: 0 !important;
   }
 }
-._1s94zl78 {
+.footer__container {
   padding-left: 24px !important;
   padding-right: 24px !important;
   margin: 0 auto !important;
   max-width: 1440px !important;
 }
 @media (min-width: 375px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 24px !important;
     padding-right: 24px !important;
   }
 }
 @media (min-width: 744px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 950px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 80px !important;
     padding-right: 80px !important;
   }
 }
 @supports (--a: a) {
-  ._1s94zl78 {
+  .footer__container {
     max-width: var(--page-shell-max-content-width, 1440px) !important;
   }
 }
-._fyxf74 {
+.footer__links-wrapper {
   padding: 32px 0 !important;
 }
 @media (min-width: 744px) {
-  ._fyxf74 {
+  .footer__links-wrapper {
     -webkit-box-direction: normal !important;
     -webkit-box-orient: vertical !important;
     display: flex !important;
@@ -8043,7 +8043,7 @@ h6:first-child {
   }
 }
 @media (min-width: 1128px) {
-  ._fyxf74 {
+  .footer__links-wrapper {
     -webkit-box-direction: normal !important;
     -webkit-box-orient: horizontal !important;
     flex-direction: row !important;
@@ -8054,43 +8054,43 @@ h6:first-child {
   }
 }
 @media (min-width: 1128px) {
-  ._1l3ys1i {
+  .footer__links {
     flex: 1 0 0% !important;
     padding-left: 12px !important;
     padding-right: 12px !important;
   }
 }
-._1l3ys1i:not(:last-child) {
+.footer__links:not(:last-child) {
   padding-bottom: 24px !important;
   margin-bottom: 24px !important;
   border-bottom: 1px solid #ddd !important;
 }
 @media (min-width: 1128px) {
-  ._1l3ys1i:not(:last-child) {
+  .footer__links:not(:last-child) {
     padding-bottom: 0 !important;
     margin-bottom: 0 !important;
     border-bottom: 0 !important;
   }
 }
-._x6q4xl {
+.footer__heading-wrapper {
   color: #222 !important;
   font-size: 14px !important;
   line-height: 18px !important;
   font-weight: 800 !important;
 }
-._otc65q {
+.footer__heading {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
   font-size: unset !important;
   font-weight: unset !important;
 }
-._yuolfv {
+.footer__links-list {
   list-style: none !important;
   margin: 0 !important;
   padding: 0 !important;
 }
 @media (min-width: 744px) {
-  ._yuolfv {
+  .footer__links-list {
     display: flex !important;
     flex-wrap: wrap !important;
     margin-left: -12px !important;
@@ -8098,30 +8098,30 @@ h6:first-child {
   }
 }
 @media (min-width: 1128px) {
-  ._yuolfv {
+  .footer__links-list {
     display: block !important;
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
 }
-._wmuyow {
+.footer__links-item {
   margin-top: 12px !important;
 }
 @media (min-width: 744px) {
-  ._wmuyow {
+  .footer__links-item {
     flex-basis: 33.3333% !important;
     padding-left: 12px !important;
     padding-right: 12px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._wmuyow {
+  .footer__links-item {
     margin-top: 16px !important;
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
 }
-._1e6wtwm5 {
+.footer__link {
   font-family: inherit !important;
   font-weight: inherit !important;
   font-style: inherit !important;
@@ -8175,7 +8175,7 @@ h6:first-child {
   width: 1px !important;
   margin-top: -1px !important;
 }
-._1wsqynx {
+.footer__copyright {
   padding-top: 24px !important;
   padding-bottom: 24px !important;
   border-top: 1px solid #ddd !important;
@@ -8240,32 +8240,32 @@ h6:first-child {
     padding-right: 2px !important;
   }
 }
-._1br4kkl {
+.footer__copyright-text {
   font-size: 14px !important;
   line-height: 18px !important;
   color: #222 !important;
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  ._1br4kkl {
+  .footer__copyright-text {
     margin-right: 19px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._opoa3c {
+  .footer__utility {
     display: inline-block !important;
     margin-left: -19px !important;
   }
 }
-._j8ldew {
+.footer__utility-spacer-wrapper {
   display: none !important;
 }
 @media (min-width: 1128px) {
-  ._j8ldew {
+  .footer__utility-spacer-wrapper {
     display: inline-block !important;
   }
 }
-._15vc6yg {
+.footer__utility-spacer {
   display: inline-block !important;
   text-align: center !important;
   width: 19px !important;
@@ -8294,16 +8294,16 @@ h6:first-child {
 ._xh0r19 {
   margin-left: 32px !important;
 }
-._115qwnm {
+.footer__social {
   list-style: none !important;
   margin: 0 !important;
   padding: 0 !important;
   display: flex !important;
 }
-._kdkpwk:not(:last-child) {
+.footer__social-item:not(:last-child) {
   margin-right: 24px !important;
 }
-._1vwyakty {
+.footer__social-link {
   font-size: inherit !important;
   font-family: inherit !important;
   font-weight: inherit !important;
@@ -9176,4 +9176,3 @@ h6:first-child {
   right: 0 !important;
   z-index: 1999 !important;
 }
-
