--- a/assets/css/pages/profile.css
+++ b/assets/css/pages/profile.css
@@ -1647,57 +1647,57 @@ h6:first-child {
 ._15rpys7s:disabled:hover {
   text-decoration: underline !important;
 }
-._1boqbzp {
+.footer {
   position: relative !important;
   background-color: #f7f7f7 !important;
   border-top: 1px solid #ddd !important;
 }
-._1s94zl78 {
+.footer__container {
   padding-left: 24px !important;
   padding-right: 24px !important;
   margin: 0 auto !important;
   max-width: 1440px !important;
 }
 @media (min-width: 375px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 24px !important;
     padding-right: 24px !important;
   }
 }
 @media (min-width: 744px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 950px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 80px !important;
     padding-right: 80px !important;
   }
 }
 @media (min-width: 1440px) {
-  ._1s94zl78 {
+  .footer__container {
     padding-left: 80px !important;
     padding-right: 80px !important;
   }
 }
 @supports (--a: a) {
-  ._1s94zl78 {
+  .footer__container {
     max-width: var(--page-shell-max-content-width, 1440px) !important;
   }
 }
-._fyxf74 {
+.footer__links-wrapper {
   padding: 32px 0 !important;
 }
 @media (min-width: 744px) {
-  ._fyxf74 {
+  .footer__links-wrapper {
     -webkit-box-direction: normal !important;
     -webkit-box-orient: vertical !important;
     display: -webkit-box !important;
@@ -1713,7 +1713,7 @@ h6:first-child {
   }
 }
 @media (min-width: 1128px) {
-  ._fyxf74 {
+  .footer__links-wrapper {
     -webkit-box-direction: normal !important;
     -webkit-box-orient: horizontal !important;
     -webkit-flex-direction: row !important;
@@ -1725,43 +1725,43 @@ h6:first-child {
     margin-right: -12px !important;
   }
 }
-._1wsqynx {
+.footer__copyright {
   padding-top: 24px !important;
   padding-bottom: 24px !important;
   border-top: 1px solid #ddd !important;
 }
-._1l3ys1i:not(:last-child) {
+.footer__links:not(:last-child) {
   padding-bottom: 24px !important;
   margin-bottom: 24px !important;
   border-bottom: 1px solid #ddd !important;
 }
 @media (min-width: 1128px) {
-  ._1l3ys1i {
+  .footer__links {
     -webkit-flex: 1 0 0% !important;
     -ms-flex: 1 0 0% !important;
     flex: 1 0 0% !important;
     padding-left: 12px !important;
     padding-right: 12px !important;
   }
-  ._1l3ys1i:not(:last-child) {
+  .footer__links:not(:last-child) {
     padding-bottom: 0 !important;
     margin-bottom: 0 !important;
     border-bottom: 0 !important;
   }
 }
-._x6q4xl {
+.footer__heading-wrapper {
   color: #222 !important;
   font-size: 14px !important;
   line-height: 18px !important;
   font-weight: 800 !important;
 }
-._yuolfv {
+.footer__links-list {
   list-style: none !important;
   margin: 0 !important;
   padding: 0 !important;
 }
 @media (min-width: 744px) {
-  ._yuolfv {
+  .footer__links-list {
     -webkit-box-lines: multiple !important;
     display: -webkit-box !important;
     display: -moz-box !important;
@@ -1776,17 +1776,17 @@ h6:first-child {
   }
 }
 @media (min-width: 1128px) {
-  ._yuolfv {
+  .footer__links-list {
     display: block !important;
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
 }
-._wmuyow {
+.footer__links-item {
   margin-top: 12px !important;
 }
 @media (min-width: 744px) {
-  ._wmuyow {
+  .footer__links-item {
     -ms-flex-preferred-size: 33.333333333333336% !important;
     -webkit-flex-basis: 33.333333333333336% !important;
     flex-basis: 33.333333333333336% !important;
@@ -1795,19 +1795,19 @@ h6:first-child {
   }
 }
 @media (min-width: 1128px) {
-  ._wmuyow {
+  .footer__links-item {
     margin-top: 16px !important;
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
 }
-._otc65q {
+.footer__heading {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
   font-size: unset !important;
   font-weight: unset !important;
 }
-._1e6wtwm5 {
+.footer__link {
   font-family: inherit !important;
   font-weight: inherit !important;
   font-style: inherit !important;
@@ -1819,28 +1819,28 @@ h6:first-child {
   outline: 0 !important;
 }
 @media (hover: hover) {
-  ._1e6wtwm5:hover {
+  .footer__link:hover {
     cursor: pointer !important;
     color: inherit !important;
     text-decoration: underline !important;
   }
 }
-._1e6wtwm5:focus {
+.footer__link:focus {
   color: inherit !important;
   text-decoration: underline !important;
 }
-._1e6wtwm5::-moz-focus-inner {
+.footer__link::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1e6wtwm5:focus::-moz-focus-inner {
+.footer__link:focus::-moz-focus-inner {
   border: none !important;
 }
-._1e6wtwm5:-moz-focusring {
+.footer__link:-moz-focusring {
   outline: 0 !important;
 }
-._1e6wtwm5:focus-visible {
+.footer__link:focus-visible {
   color: #222 !important;
   text-decoration: underline !important;
   -webkit-transition: box-shadow 0.2s !important;
@@ -1849,13 +1849,13 @@ h6:first-child {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1e6wtwm5:focus-visible {
+  .footer__link:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1e6wtwm5:focus[data-focus-visible-added] {
+.footer__link:focus[data-focus-visible-added] {
   color: #222 !important;
   text-decoration: underline !important;
   -webkit-transition: box-shadow 0.2s !important;
@@ -1864,7 +1864,7 @@ h6:first-child {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1e6wtwm5:focus[data-focus-visible-added] {
+  .footer__link:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
@@ -1994,11 +1994,11 @@ h6:first-child {
   color: inherit !important;
   text-decoration: none !important;
 }
-._j8ldew {
+.footer__utility-spacer-wrapper {
   display: none !important;
 }
 @media (min-width: 1128px) {
-  ._j8ldew {
+  .footer__utility-spacer-wrapper {
     display: inline-block !important;
   }
 }
@@ -2018,31 +2018,31 @@ h6:first-child {
     padding-right: 2px !important;
   }
 }
-._1br4kkl {
+.footer__copyright-text {
   font-size: 14px !important;
   line-height: 18px !important;
   color: #222 !important;
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  ._1br4kkl {
+  .footer__copyright-text {
     margin-right: 19px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._opoa3c {
+  .footer__utility {
     display: inline-block !important;
     margin-left: -19px !important;
   }
 }
-._15vc6yg {
+.footer__utility-spacer {
   display: inline-block !important;
   text-align: center !important;
   width: 19px !important;
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._115qwnm {
+.footer__social {
   list-style: none !important;
   margin: 0 !important;
   padding: 0 !important;
@@ -2052,10 +2052,10 @@ h6:first-child {
   display: -webkit-flex !important;
   display: flex !important;
 }
-._kdkpwk:not(:last-child) {
+.footer__social-item:not(:last-child) {
   margin-right: 24px !important;
 }
-._1vwyakty {
+.footer__social-link {
   font-size: inherit !important;
   font-family: inherit !important;
   font-weight: inherit !important;
@@ -2066,16 +2066,16 @@ h6:first-child {
   text-decoration: none !important;
 }
 @media (hover: hover) {
-  ._1vwyakty:hover {
+  .footer__social-link:hover {
     cursor: pointer !important;
     color: inherit !important;
     text-decoration: underline !important;
   }
 }
-._1vwyakty:hover {
+.footer__social-link:hover {
   text-decoration: none !important;
 }
-._1vwyakty:focus {
+.footer__social-link:focus {
   color: inherit !important;
   text-decoration: none !important;
 }
@@ -5432,4 +5432,3 @@ h6:first-child {
   width: 100% !important;
   vertical-align: top !important;
 }
-
