--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -21904,7 +21904,7 @@ h6:first-child {
 ._1mqc21n {
   margin-left: 16px !important;
 }
-._1x8lx0do {
+.form__switch--checked {
   border-radius: 32px !important;
   border-style: solid !important;
   border-width: 1px !important;
@@ -21938,7 +21938,7 @@ h6:first-child {
   transform: translate3d(16px, 0, 0) !important;
   color: #222 !important;
 }
-._1hzx1vsg {
+.form__switch {
   border-radius: 32px !important;
   border-style: solid !important;
   border-width: 1px !important;
@@ -22565,7 +22565,7 @@ h6:first-child {
   cursor: pointer !important;
   padding: 0 !important;
 }
-._1yf4i4f {
+.form__check-input {
   position: absolute !important;
   opacity: 0 !important;
 }
