--- a/assets/css/pages/privacy-and-sharing.css
+++ b/assets/css/pages/privacy-and-sharing.css
@@ -3095,7 +3095,7 @@
 ._1vk19cb {
   margin-top: 16px !important;
 }
-._1x8lx0do {
+.form__switch--checked {
   border-radius: 32px !important;
   border-style: solid !important;
   border-width: 1px !important;
@@ -3183,7 +3183,7 @@
   font-weight: 400 !important;
   margin-bottom: 16px !important;
 }
-._1hzx1vsg {
+.form__switch {
   border-radius: 32px !important;
   border-style: solid !important;
   border-width: 1px !important;
