--- a/assets/css/pages/submission/guestReq.css
+++ b/assets/css/pages/submission/guestReq.css
@@ -3034,7 +3034,7 @@ body {
 ._1mqc21n {
   margin-left: 16px!important
 }
-._1yf4i4f {
+.form__check-input {
   position: absolute!important;
   opacity: 0!important
 }
