--- a/assets/css/pages/submission/review.css
+++ b/assets/css/pages/submission/review.css
@@ -2936,7 +2936,7 @@ a:hover {
   cursor: pointer!important;
   padding: 0!important
 }
-._1yf4i4f {
+.form__check-input {
   position: absolute!important;
   opacity: 0!important
 }
