--- a/assets/css/pages/edit/GuestReq.css
+++ b/assets/css/pages/edit/GuestReq.css
@@ -3024,7 +3024,7 @@ body {
 ._1mqc21n {
   margin-left: 16px!important
 }
-._1yf4i4f {
+.form__check-input {
   position: absolute!important;
   opacity: 0!important
 }
