--- a/assets/css/pages/payments.css
+++ b/assets/css/pages/payments.css
@@ -3806,7 +3806,7 @@ _qgvrjoy {
   display: table-cell !important;
   vertical-align: middle !important;
 }
-._17y21tl {
+.form__switch-secondary {
   appearance: none !important;
   height: 32px !important;
   width: 48px !important;
@@ -3822,7 +3822,7 @@ _qgvrjoy {
   -webkit-tap-highlight-color: transparent !important;
 }
 @supports (--custom: properties) {
-  ._17y21tl {
+  .form__switch-secondary {
     height: var(--size-switch-size, 32px) !important;
     width: var(--size-switch-background-width, 48px) !important;
     background-color: var(--color-accent-bg-gray, #f2f2f2) !important;
