--- a/assets/css/pages/professional-hosting.css
+++ b/assets/css/pages/professional-hosting.css
@@ -2457,7 +2457,7 @@
   display: table-cell !important;
   vertical-align: middle !important;
 }
-._17y21tl {
+.form__switch-secondary {
   appearance: none !important;
   height: 32px !important;
   width: 48px !important;
@@ -2473,7 +2473,7 @@
   -webkit-tap-highlight-color: transparent !important;
 }
 @supports (--custom: properties) {
-  ._17y21tl {
+  .form__switch-secondary {
     height: var(--size-switch-size, 32px) !important;
     width: var(--size-switch-background-width, 48px) !important;
     background-color: var(--color-accent-bg-gray, #f2f2f2) !important;
