--- a/assets/css/pages/signup_login.css
+++ b/assets/css/pages/signup_login.css
@@ -3692,7 +3692,7 @@
   cursor: pointer !important;
   padding: 0 !important;
 }
-._1yf4i4f {
+.form__check-input {
   position: absolute !important;
   opacity: 0 !important;
 }
