--- a/assets/css/pages/submission/basic.css
+++ b/assets/css/pages/submission/basic.css
@@ -3084,7 +3084,7 @@ body {
   cursor: pointer!important;
   padding: 0!important
 }
-._1yf4i4f {
+.form__check-input {
   position: absolute!important;
   opacity: 0!important
 }
