--- a/assets/css/pages/submission/booking.css
+++ b/assets/css/pages/submission/booking.css
@@ -3822,7 +3822,7 @@ body {
 ._1vk19cb {
   margin-top: 16px!important
 }
-._1hzx1vsg {
+.form__switch {
   border-radius: 32px!important;
   border-style: solid!important;
   border-width: 1px!important;
